--- a/EasyBank/Views/Operation/TotalCreditInterests.cshtml
+++ b/EasyBank/Views/Operation/TotalCreditInterests.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<EasyBank.Models.TotalAmountForCurrency>
 
-<h3>Total Credit Interest</h3>
+<h3>@Resources.Resource.TotalCreditInterests</h3>
 <table>
     <tr>
         @foreach (var item in Model)
