--- a/EasyBank/Views/Operation/TotalCreditedAmount.cshtml
+++ b/EasyBank/Views/Operation/TotalCreditedAmount.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<EasyBank.Models.TotalAmountForCurrency>
 
-<h3>Total Credited Amount</h3>
+<h3>@Resources.Resource.TotalCreditAmount</h3>
 <table>
     <tr>
         @foreach (var item in Model)
