--- a/EasyBank/Views/Protected/AddClient.cshtml
+++ b/EasyBank/Views/Protected/AddClient.cshtml
@@ -57,7 +57,7 @@
         <input type="file" name="file" id="file" accept="image/jpeg,image/png" style="width: 100%;" value="@Resources.Resource.ChooseFile" />
         @ViewBag.Message
         <p>
-            <input type="submit" value="@Resources.Resource.Create" class="submit" />
+            <input type="submit" value=@Resources.Resource.Create class="submit" />
         </p>
     </fieldset>
 }
