--- a/EasyBank/Views/Protected/AddPhoto.cshtml
+++ b/EasyBank/Views/Protected/AddPhoto.cshtml
@@ -55,5 +55,5 @@
 }
 
 <div>
-    @Html.ActionLink(@Resources.Resource.BackToList, "ClientsList")
+    @Html.ActionLink(@Resources.Resource.BackToProfile, "ClientsProfile", Model)
 </div>
