--- a/EasyBank/Views/Protected/ClientsList.cshtml
+++ b/EasyBank/Views/Protected/ClientsList.cshtml
@@ -77,7 +77,7 @@ else
                         @Html.ActionLink(@Resources.Resource.Passport, "ShowPassport", new { id = item.ClientId }) |
                         @Html.ActionLink(@Resources.Resource.AddPhoto, "AddPhoto", new { id = item.ClientId }) |
                         @Html.ActionLink(@Resources.Resource.Edit, "EditClient", new { id = item.ClientId }) |
-                        @Html.ActionLink(@Resources.Resource.Details, "ClientsProfile", new { clientId = item.ClientId })
+                        @Html.ActionLink(@Resources.Resource.ClientsProfile, "ClientsProfile", new { clientId = item.ClientId })
                     </td>
                 </tr>
             }
