--- a/EasyBank/Views/Operation/ProfitCalc.cshtml
+++ b/EasyBank/Views/Operation/ProfitCalc.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EasyBank.Models.ProfitCalc
 @using (Html.BeginForm("ProfitCalc", "Operation", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
-    <p>Enter number of months to calculate interests.</p>
+    <p>@Resources.Resource.CalculateMessage</p>
     @* <input type="number" name="number"  />*@
     @Html.ValidationSummary(true)
     <div class="display-field">
