--- a/EasyBank/Views/Operation/TotalDepositInterests.cshtml
+++ b/EasyBank/Views/Operation/TotalDepositInterests.cshtml
@@ -1,5 +1,5 @@
 ﻿@model List<EasyBank.Models.TotalAmountForCurrency>
-<h3>Total Deposit Interest</h3>
+<h3>@Resources.Resource.TotalDepositInterests</h3>
 <table>
     <tr>
         @foreach (var item in Model)
