--- a/EasyBank/Views/Operation/TotalDepositedAmount.cshtml
+++ b/EasyBank/Views/Operation/TotalDepositedAmount.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<EasyBank.Models.TotalAmountForCurrency>
 @Html.Action("BankAccounts","Office")
 <br/>
-<h3>Total Deposited Amount</h3>
+<h3>@Resources.Resource.TotalDepositedAmount</h3>
 <table>
     <tr>
         @foreach (var item in Model)
