--- a/EasyBank/Views/Protected/ClientsProfile.cshtml
+++ b/EasyBank/Views/Protected/ClientsProfile.cshtml
@@ -6,7 +6,7 @@
 <script>
     $(document).ready(function () {
         prevTriggeredTrId = "";
-
+        debugger;
         $("#types").css("display", "none");
         $("#currencies").css("display", "none");
         $("#depositTypes").css("display", "none");
@@ -158,29 +158,11 @@
         <div style="width: 180px; height: 135px; background-color: white">
             @Html.Action("ShowClientPhoto", new { id = Model.ClientId })
         </div>
-        @*-@Html.ActionLink(@Resources.Resource.AddAccount, "AddAccount", new { clientId = Model.ClientId }, new{@id="createAccount"})*@
+       
 
 <div>
     @Html.ActionLink(@Resources.Resource.EditPhoto, "AddPhoto", new { id = Model.ClientId })
 </div>
-<input type="button" id="showFirstBox" value="@Resources.Resource.AddAccount">
-<div id="accCreateDiv">
-    @Html.Action("AddAccountPartial")
-@*=======
-
-@Html.Action("ShowClientPhoto", new { id = Model.ClientId })
-<p>
-    @Html.ActionLink(@Resources.Resource.AddAccount, "AddAccount", new { clientId = Model.ClientId })
-</p>
-<p>
-    @Html.ActionLink("Add Deposit Account", "AddDepositAccount", new { clientId = Model.ClientId })
-</p>
-<p>
-    @Html.ActionLink("Add Credit Account", "AddCreditAccount", new { clientId = Model.ClientId })
-</p>
-<div>
-    @Html.ActionLink(@Resources.Resource.AddPhoto, "AddPhoto", new { id = Model.ClientId })
->>>>>>> 6d6e7a67b5b7fc401523535000a3baaf55a42ed0*@
 </div>
 <br/>
 <div style="clear: both; background-color: rgba(255,255,255, 0.4); float: left; padding-top: 10px; padding-left: 20px; padding-bottom: 30px; border-radius: 10px; margin-top: 10px; min-width: 1000px;">
