Translated some references

--- a/EasyBank/Views/Office/BankAccounts.cshtml
+++ b/EasyBank/Views/Office/BankAccounts.cshtml
@@ -20,5 +20,5 @@
     </tr>
 </table>
 <br />
-@Html.ActionLink("Back", "TotalDepositedAmount", "Operation")  
+@Html.ActionLink(@Resources.Resource.Back, "TotalDepositedAmount", "Operation")  
 
