--- a/EasyBank/Views/Operation/TotalDepositedAmount.cshtml
+++ b/EasyBank/Views/Operation/TotalDepositedAmount.cshtml
@@ -1,5 +1,5 @@
 ﻿@model List<EasyBank.Models.TotalAmountForCurrency>
-@Html.ActionLink("Bank Accounts", "BankAccounts", "Office")
+@Html.ActionLink(@Resources.Resource.BankAccounts, "BankAccounts", "Office")
 
 <br/>
 <h3>@Resources.Resource.TotalDepositedAmount</h3>
