--- a/EasyBank/Views/Protected/AccountHistory.cshtml
+++ b/EasyBank/Views/Protected/AccountHistory.cshtml
@@ -53,7 +53,7 @@
             </td>
 
 
-            @if (item.Amount > 0 || (item.Amount > 0 && item.ToAccountId == ViewBag.ClientCardId))
+            @if (item.Amount > 0 && item.ToAccountId == ViewBag.ClientsCardId)
             { 
                 <td id="positiveAmount" style="color: green">
                     @Html.DisplayFor(modelItem => item.Amount)
