--- a/EasyBank/Views/Operation/WidthdrawMoney.cshtml
+++ b/EasyBank/Views/Operation/WidthdrawMoney.cshtml
@@ -105,7 +105,7 @@
     @Html.DropDownList("CurrencyName", itemList)
 
     <br />
-    <input type="submit" value=@Resources.Resource.Submit />
+    <input type="submit" value=@Resources.Resource.Submit onclick="return confirm(@Resources.Resource.AskToAddMoney) ? true : false;"/>
     }
 }
 else
