a lot of small fixes

--- a/EasyBank/Views/Operation/AddMoney.cshtml
+++ b/EasyBank/Views/Operation/AddMoney.cshtml
@@ -98,7 +98,7 @@
         
     </div>
 
-    <input type="submit" value=@Resources.Resource.Submit  onclick="return confirm(@Resources.Resource.AskToAddMoney) ? true : false;" />
+    <input type="submit" value=@Resources.Resource.Submit  onclick="return confirm('@Resources.Resource.AskToAddMoney') ? true : false;" />
 }
 
 <p>
