--- a/EasyBank/Views/Operation/WidthdrawMoney.cshtml
+++ b/EasyBank/Views/Operation/WidthdrawMoney.cshtml
@@ -24,56 +24,56 @@
     <legend>Account</legend>
 
     <div class="display-label">
-        @Html.DisplayNameFor(model => model.AccountNumber)
+        <b>@Html.DisplayNameFor(model => model.AccountNumber)</b>
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.AccountNumber)
     </div>
 
     <div class="display-label">
-        @Html.DisplayNameFor(model => model.ExpirationDate)
+        <b>@Html.DisplayNameFor(model => model.ExpirationDate)</b>
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.ExpirationDate)
     </div>
 
     <div class="display-label">
-        @Html.DisplayNameFor(model => model.Amount)
+        <b>@Html.DisplayNameFor(model => model.Amount)</b>
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Amount)
     </div>
 
     <div class="display-label">
-        @Html.DisplayNameFor(model => model.AvailableAmount)
+       <b>@Html.DisplayNameFor(model => model.AvailableAmount)</b>
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.AvailableAmount)
     </div>
 
     <div class="display-label">
-        @Html.DisplayNameFor(model => model.ClientId)
+        <b>@Html.DisplayNameFor(model => model.ClientId)</b>
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Client.Name)
     </div>
 
     <div class="display-label">
-        @Html.DisplayNameFor(model => model.TypeId)
+        <b>@Html.DisplayNameFor(model => model.TypeId)</b>
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.AccountType.TypeName)
     </div>
 
     <div class="display-label">
-        @Html.DisplayNameFor(model => model.CurrencyId)
+        <b>@Html.DisplayNameFor(model => model.CurrencyId)</b>
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Currency.CurrencyName)
     </div>
 
     <div class="display-label">
-        @Html.DisplayNameFor(model => model.StatusId)
+        <b>@Html.DisplayNameFor(model => model.StatusId)</b>
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.AccountStatus.StatusName)
@@ -81,7 +81,7 @@
     @if (Model.AccountType.TypeId != 1)
     {
         <div class="display-label">
-        @Html.DisplayNameFor(model => model.DepositCreditModel.EarlyTermination)
+        <b>@Html.DisplayNameFor(model => model.DepositCreditModel.EarlyTermination)</b>
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.DepositCreditModel.EarlyTermination)
@@ -105,7 +105,7 @@
     @Html.DropDownList("CurrencyName", itemList)
 
     <br />
-    <input type="submit" value=@Resources.Resource.Submit onclick="return confirm(@Resources.Resource.AskToAddMoney) ? true : false;"/>
+    <input type="submit" value="@Resources.Resource.Submit" onclick="return confirm('@Resources.Resource.AskToAddMoney') ? true : false;"/>
     }
 }
 else
