--- a/EasyBank/Views/Operation/TotalDepositedAmount.cshtml
+++ b/EasyBank/Views/Operation/TotalDepositedAmount.cshtml
@@ -1,4 +1,7 @@
 ﻿@model List<EasyBank.Models.TotalAmountForCurrency>
+
+<h2>@Html.Label(@Resources.Resource.FinancialReports)</h2>
+<br />
 @Html.ActionLink(@Resources.Resource.BankAccounts, "BankAccounts", "Office")
 
 <br/>
