--- a/EasyBank/Views/Account/Register.cshtml
+++ b/EasyBank/Views/Account/Register.cshtml
@@ -49,7 +49,7 @@
  @Html.AntiForgeryToken()
  @Html.ValidationSummary()
 
-
+    <h2>@Html.Label(@Resources.Resource.AddClient)</h2>
 
     <fieldset>
         <legend>Client</legend>
