--- a/EasyBank/Views/Office/AddDepositCredit.cshtml
+++ b/EasyBank/Views/Office/AddDepositCredit.cshtml
@@ -1,5 +1,5 @@
 ﻿@model EasyBank.Models.DepositCreditModel
-
+<h2>@Html.Label(@Resources.Resource.AddBankProduct)</h2>
 @using (Html.BeginForm("AddDepositCredit", "Office", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
