--- a/EasyBank/Views/Office/BankAccounts.cshtml
+++ b/EasyBank/Views/Office/BankAccounts.cshtml
@@ -1,5 +1,5 @@
 ﻿@model List<EasyBank.Models.BankAccount>
-
+    <h2>@Html.Label(@Resources.Resource.BankAccounts)</h2>
 <h3>@Resources.Resource.BankAccountsBalance</h3>
 <table>
     <tr>
