--- a/EasyBank/Views/Office/DepositList.cshtml
+++ b/EasyBank/Views/Office/DepositList.cshtml
@@ -1,4 +1,6 @@
 ﻿@model List<EasyBank.Models.DepositCreditModel>
+
+<h2>@Html.Label(@Resources.Resource.BankProducts)</h2>
 <br/>
 @if (User.IsInRole("Administrator"))
 { 
