--- a/EasyBank/Views/Protected/AccountHistory.cshtml
+++ b/EasyBank/Views/Protected/AccountHistory.cshtml
@@ -1,6 +1,9 @@
 ﻿@model PagedList.IPagedList<EasyBank.Models.Operation>
 @using PagedList.Mvc;
 <link href="/Content/PagedList.css" rel="stylesheet" type="text/css" />
+
+<h2>@Html.Label(@Resources.Resource.History)</h2>
+
 <table style="margin: 0 auto;">
     <tr>
         <th></th>
