--- a/EasyBank/Views/Protected/ErrorReports.cshtml
+++ b/EasyBank/Views/Protected/ErrorReports.cshtml
@@ -1,5 +1,6 @@
 ﻿@model List<EasyBank.Models.ErrorReport>
 
+<h2>@Html.Label(@Resources.Resource.ErrorReports)</h2>
 @foreach (EasyBank.Models.ErrorReport errorReport in Model)
 {
     <p>
