--- a/EasyBank/Views/Protected/ShowPassport.cshtml
+++ b/EasyBank/Views/Protected/ShowPassport.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = @Resources.Resource.ClientsPassport;
 }
-<h2>@Resources.Resource.Passport</h2>
+<h2>@Html.Label(@Resources.Resource.Passport)</h2>
 
 @if (Model == null)
 {
