--- a/EasyBank/Views/Operation/AddMoney.cshtml
+++ b/EasyBank/Views/Operation/AddMoney.cshtml
@@ -20,6 +20,10 @@
     });
 </script>
 <h2>@Html.Label(@Resources.Resource.AddMoney)</h2>
+<br />
+    @Html.ActionLink(@Resources.Resource.BackToProfile, "ClientsProfile", "Protected", new { clientId = Model.ClientId }, null)
+<br />
+<br />
 
 <fieldset>
     <legend>Account</legend>
@@ -145,6 +149,3 @@
     <input type="submit" value=@Resources.Resource.Submit  onclick="return confirm('@Resources.Resource.AskToAddMoney    ') ? true : false;" />
 }
 
-<p>
-    @Html.ActionLink(@Resources.Resource.BackToList, "ClientsProfile", "Protected", new { clientId = Model.ClientId }, null)
-</p>
