--- a/EasyBank/Views/Operation/TransferMoney.cshtml
+++ b/EasyBank/Views/Operation/TransferMoney.cshtml
@@ -21,7 +21,10 @@
 </script>
 
 <h2>@Html.Label(@Resources.Resource.TransMoney)</h2>
-
+<br />
+@Html.ActionLink(@Resources.Resource.BackToProfile, "ClientsProfile", "Protected", new { clientId = Model.ClientId }, null)
+<br />
+<br />
 <fieldset>
     <legend>Account</legend>
 
@@ -117,6 +120,3 @@ else
     <h6>@Resources.Resource.TransferErrorFromCreditAcc</h6>
 }
 
-<p>
-    @Html.ActionLink(@Resources.Resource.BackToList, "ClientsProfile", "Protected", new { clientId = Model.ClientId }, null)
-</p>
