--- a/EasyBank/Views/Account/DepositList.cshtml
+++ b/EasyBank/Views/Account/DepositList.cshtml
@@ -1,6 +1,5 @@
 ﻿@model List<EasyBank.Models.DepositCreditModel>
-<br />
-
+<h2>@Html.Label(@Resources.Resource.BankProducts)</h2>
 <br />
 <table>
     <tr>
