Updated percent Calculation

--- a/EasyBank/Views/Account/RegisterOperator.cshtml
+++ b/EasyBank/Views/Account/RegisterOperator.cshtml
@@ -5,6 +5,7 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
 
+    <h2>Register new operator</h2>
     <fieldset>
         <legend>Client</legend>
         
