--- a/EasyBank/Views/Protected/ClientsList.cshtml
+++ b/EasyBank/Views/Protected/ClientsList.cshtml
@@ -76,8 +76,8 @@ else
                 <td>
                     @Html.ActionLink(@Resources.Resource.Passport, "ShowPassport", new { id = item.ClientId })   |
                         @Html.ActionLink(@Resources.Resource.AddPhoto, "AddPhoto", new { id = item.ClientId }) |
-                        @Html.ActionLink(@Resources.Resource.Edit, "EditClient", new { id = item.ClientId }) |
-                        @Html.ActionLink(@Resources.Resource.ClientsProfile, "ClientsProfile", new { clientId = item.ClientId })
+                        @Html.ActionLink(@Resources.Resource.Edit, "EditClient", new { id = item.ClientId }) @* |
+                        @Html.ActionLink(@Resources.Resource.ClientsProfile, "ClientsProfile", new { clientId = item.ClientId }) *@
                     </td>
                 </tr>
             }
