--- a/EasyBank/Views/Operation/TotalDepositedAmount.cshtml
+++ b/EasyBank/Views/Operation/TotalDepositedAmount.cshtml
@@ -25,8 +25,9 @@
 <br />
 
 @Html.Action("TotalCreditedAmount")
-@*@Html.Action("TotalDepositInterests")
-@Html.Action("TotalCreditInterests")*@
+@Html.Action("TotalDepositInterests")
+@Html.Action("TotalCreditInterests")
 @Html.Action("ProfitPlanningCalc")
+@Html.Action("ProfitCalc")
 
 
